logs/turtlesim/build.make.055.log.stderr
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In member function ‘bool turtlesim::Turtle::update(double, QPainter&, const QImage&, qreal, qreal)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:219:75: error: ‘tr’ was not declared in this scope
       path_painter.drawText(QRect(wayx, wayy, 300, 300), Qt::AlignCenter, tr("Qt\nProject"));
                                                                           ^~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:219:75: note: suggested alternative: ‘tm’
       path_painter.drawText(QRect(wayx, wayy, 300, 300), Qt::AlignCenter, tr("Qt\nProject"));
                                                                           ^~
                                                                           tm
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
